

2023-06-30 Franz Holzinger  <franz@ttproducts.de>
    * compatibility: Method errorInfo has been removed in TYPO3 12.
    * use base class Doctrine\DBAL\Driver instead of Doctrine\DBAL\Driver\Mysqli\Driver to support all drivers.

2022-12-01 Franz Holzinger  <franz@ttproducts.de>
    * compatibility: Migrate extension icon to Resources/Public/Icons/Extension.gif

2022-08-03 Franz Holzinger <franz@ttproducts.de>
    * bugfix: num_rows only works with Doctrine class comparison for instance of result set with leading backslash

2022-02-24 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The minimum size of a SQL part must be 2 characters.

2022-02-13 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Doctrine API

2022-02-01 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PARAM_STR_ARRAY must be treated as array
    * bugfix: There is no member variable debug_lastBuiltQuery .

2022-01-15 Franz Holzinger <franz@ttproducts.de>
    * remove code for TYPO3 < 9
    * bugfix for PHP 8 and TYPO3 11

2021-10-30 Franz Holzinger <franz@ttproducts.de>
    * fix debug_backtrace

2021-04-16 Franz Holzinger <franz@ttproducts.de>
    * works with TYPO3 11

2021-02-27 Franz Holzinger <franz@ttproducts.de>
    * enhancement for backtrace: New option BTRACE_LIMIT to set the limit of characters for the backtrace

2021-01-16 Franz Holzinger <franz@ttproducts.de>
    * bugfix: EXCLUDETABLES must be considered even if TABLES is not set to ALL
    * bugfix in parsing of table name

2021-01-04 Franz Holzinger <franz@ttproducts.de>
    * add support for TYPO3 10.4

2020-12-23 Franz Holzinger <franz@ttproducts.de>
    * enhancement for DoctrineConnection: Catch and rethrow the exception for method executeQuery in order to generate a debug output in the error case.
    * bugfix: output must be made in an error case when not table can be found due to a former exception

2020-11-13 Franz Holzinger <franz@ttproducts.de>