@@ -23,11 +23,11 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": "^10.4 || ^11.5"
+    "typo3/cms-core": "^11.5 || ^12.4"
   },
   "suggest": {
     "friendsoftypo3/typo3db-legacy": "^1.0",
-    "jambagecom/fh-debug": "^0.11"
+    "jambagecom/fh-debug": "^0.12"
   },
   "autoload": {
     "psr-4": {
